# tonic-server

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose-tests.yaml  docker-compose.yaml  init-db-tests.sh  run_tests.sh
src/: main.rs
src/database/: database_object.rs  error.rs  mod.rs
src/database/postgres/: mod.rs
src/model/: error.rs  mod.rs
src/otel/: logger.rs  mod.rs  tracer.rs
src/proto/agenda/v1/: agenda.proto
src/service/: mod.rs
