[package]
name = "tonic-server"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.19.0"
openssl = { version = "0.10.40", features = ["vendored"] }
opentelemetry = { version = "0.24.0", features = ["metrics", "logs"] }
opentelemetry-otlp = { version="0.17.0", features = ["metrics", "logs", "grpc-tonic"] }
opentelemetry_sdk = { version = "*", features = ["async-std", "rt-tokio"] }
opentelemetry-stdout = "0.5.0"
opentelemetry-semantic-conventions = "0.16.0"
prost = "0.13.1"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls"] }
sqlx-postgres = "0.8.2"
tonic = { version = "0.12.1", features = [] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "signal"] }
tonic-build = "0.12.1"
tracing = "0.1.40"
tracing-opentelemetry = "0.25.0"
tracing-loki = "0.2.5"
tracing-subscriber = { version = "0.3.18" , features = ["env-filter"]}

[build-dependencies]
tonic-build = "0.12.1"
